--- a/gobble_website.html
+++ b/gobble_website.html
@@ -6,8 +6,8 @@
         <style type="text/css">
                 
         .map {
-                width = 100%
-                height = 80%
+                width = 1800px
+                height = 1200px
         }
 
         </style>
