--- a/gobble_website.html
+++ b/gobble_website.html
@@ -6,8 +6,8 @@
         <style type="text/css">
                 
         .map {
-                width = 1800px
-                height = 1200px
+                width = "1800"
+                height = "1200"
         }
 
         </style>
@@ -15,5 +15,5 @@
         <form align="center" action="www.gobble.com.au" method="get"><input name="Search" type="text" placeholder="What are you craving?" />
         </body>
         <br />
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13278.305474961278!2d150.9656457!3d-33.6940319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1575683870014!5m2!1sen!2sau" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1659.8863368123427!2d150.964535!3d-33.68895!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1575684108801!5m2!1sen!2sau" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </html>
