--- a/gobble_website.html
+++ b/gobble_website.html
@@ -6,8 +6,7 @@
         <style type="text/css">
                 
         .map {
-                width="1800"
-                height="1200"
+                width:"1800"
         }
 
         </style>
