--- a/gobble_website.html
+++ b/gobble_website.html
@@ -4,7 +4,7 @@
         <title>gobble</title>
 </head>
         <style type="text/css">
-        iframe {
+        iframe.gobble_map {
                 width:"1200";
                 height:"900";
         }
@@ -13,7 +13,7 @@
         <form align="center" action="www.gobble.com.au" method="get"><input name="Search" type="text" placeholder="What are you craving?" />
         </body>
         <br />
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13278.305570371118!2d150.9656456981349!3d-33.694031282553546!2m3!
+        <iframe class="gobble_map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13278.305570371118!2d150.9656456981349!3d-33.694031282553546!2m3!
         1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1575727797975!5m2!1sen!2sau" frameborder="0" style=
         "border:0;" allowfullscreen=""></iframe>
 
