--- a/gobble_website.html
+++ b/gobble_website.html
@@ -1,35 +1,90 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-        <title>gobble</title>
+  <title>gobble</title>
 </head>
-        <style type="text/css">
+<style type="text/css">
+  div {
+    border: 1px solid #000;
+  }
 
-        input[type=text] {
-          padding: 10px;
-          width: 50%;
-          border: 1px solid #000;
-          border-radius: 10px;
-        }
+  #header {
+    //position: fixed;
+    margin: 10px;
+    padding: 5px;
+  }
 
-        #map {
-          padding 10px;
-        }
+  #query {
+    background-color: #FF8484;
+    padding 10px;
+  }
 
-        </style>
+  ul.nav {}
 
-        <body>
+  li.nav {
+    display: inline;
+  }
 
-          <h1 align="center"> Gobble </h1>
+  a.nav {
+    text-decoration: none;
+    color: #000;
+  }
 
-          <p> Hello person, you can gobble deez nuts! </p>
+  img.search_food {
+    position: relative;
+    left: 60px;
+    top: 17px;
+    width: 50px;
+    height: auto;
+    z-index: 0;
+  }
 
-          <form align="center" action="www.gobble.com.au" method="get"><input name="Search" type="text" placeholder="What are you craving?" />
+  input[type=text] {
+    margin: 10px;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 10px;
+    height: 25px;
+    width: 25%;
+    border: 1px solid #000;
+    border-radius: 10px;
+  }
 
-        <div id="map">
-          <iframe class="gobble_map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13278.305570371118!2d150.9656456981349!3d-33.694031282553546!2m3!
-          1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1575727797975!5m2!1sen!2sau" width="100%" height="500" frameborder="0" style= "border:0;"
-          allowfullscreen=""></iframe>
-        </div>
+  input::placeholder {
+    color: rgba(110, 110, 110, 0.5);
+  }
 
-        </body>
+  #map {
+    margin: 0px 10px 10px 10px;
+
+    border: 5px solid #222;
+  }
+</style>
+
+<body>
+
+  <div id="header">
+    <h1> Gobble </h1>
+
+    <ul class="nav">
+      <li class="nav"><a class="nav" href="gobble_website.html" target="_blank">Home</a></li>
+      <li class="nav"><a class="nav" href="nav/about.html">About</a></li>
+      <li class="nav"><a class="nav" href="nav/contact.html">Contact</a></li>
+    </ul>
+
+  </div>
+
+  <div id="query">
+
+    <form class="search_food" align="center" action="www.gobble.com.au" method="get"><img class=search_food src="img/magnifyingglass.png"><input class="search_food" name="Search" type="text" placeholder="What are you craving?" />
+
+      <div id="map">
+        <iframe class="gobble_map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13278.305570371118!2d150.9656456981349!3d-33.694031282553546!2m3!
+      1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1575727797975!5m2!1sen!2sau" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+  </div>
+
+  <im
+
+</body>
